--- a/react/src/theme/light.css
+++ b/react/src/theme/light.css
@@ -24,8 +24,7 @@ body.light {
     color: var(--card-color1);
 }
 
-div.light.background {
-    height:100%;
+.light.background {
     background: var(--gradient-main);
     color: var(--c1);
 }
